--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en">
     <header>
-        <title>Recipes</title>
+        <title>Lasagna</title>
         <meta charset="UTF-8">
     </header>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        <h1>Lasagna</h1>
     </body>
 </html>
