complete the lasagna.html page
The lasagna.html page now display the title of the recipe, a picture of
the recipe, a description, ingredients, and a step by step tutorial on
how to cook the recipe.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,76 @@
     </header>
     <body>
         <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpg" width="300" height="300">
+        <h3>Description</h3>
+
+        <p>
+            Lasagna is a classic and hearty Italian dish known for its layers of wide, flat pasta sheets,
+            rich meat sauce, creamy béchamel sauce, and melted cheese. The dish is typically baked to
+            perfection, resulting in a savory and satisfying meal. The pasta sheets are often 
+            layered with a robust meat sauce, which may include ground beef, pork, or a combination of 
+            both, cooked with tomatoes, onions, garlic, and various herbs and spices.
+        </p>
+        <p>
+            In addition to the meat sauce, each layer is generously spread with béchamel sauce, a white sauce
+            made from butter, flour, and milk. This adds a creamy and velvety texture to the lasagna, enhancing 
+            its overall flavor and richness. The layers of pasta, meat sauce, and béchamel are repeated to form 
+            a substantial and indulgent casserole.
+        </p>
+        <p>
+            Lasagna variations can include vegetables, such as spinach or mushrooms, for added complexity and 
+            nutritional value. The dish is then baked in the oven until the pasta is tender and the top layer develops
+             a golden-brown crust. Once out of the oven, it is commonly allowed to rest before serving to allow the 
+             flavors to meld together.
+        </p>
+        <p>
+            Lasagna is a beloved comfort food that brings people together around the dining table. Its versatility 
+            and ability to be prepared in advance make it a popular choice for family gatherings, celebrations, 
+            and potluck dinners.
+        </p>
+
+        <h3>Ingredients</h3>
+
+        <ul>
+            <li>Ground Beef</li>
+            <li>Onion</li>
+            <li>Garlic, minced</li>
+            <li>Canned crushed tomatoes</li>
+            <li>Tomato paste</li>
+            <li>Italian seasoning</li>
+            <li>Salt and black pepper</li>
+            <li>Olive oil</li>
+            <li>Butter</li>
+            <li>Milk</li>
+            <li>Salt and nutmeg</li>
+            <li>Lasagna noodles</li>
+            <li>Shredded mozzarella cheese</li>
+            <li>Grated Parmesan cheese</li>
+            <li>Fresh parsley</li>
+        </ul>
+
+        <h3>Steps</h3>
+
+        <ol>
+            <li>In large skillet or saucepan, heat olive oil over medium heat.</li>
+            <li>Add chopped onions and cook until softened.</li>
+            <li>Add minced garlic and cook for another minute.</li>
+            <li>Add ground meat and brown it, breaking it apart with a spoon.</li>
+            <li>Stir in crushed tomatoes, tomato paste, Italian seasoning, salt, and pepper.</li>
+            <li>Simmer the sauce for about 20-30 minutes, stirring occasionally.</li>
+            <li>Cook the lasagna noodles.</li>
+            <li>In a saucepan, melt butter over medium heat.</li>
+            <li>Stir in the flour to form a paste. Cook for a couple of minutes, stirring constantly.</li>
+            <li>Gradually whisk in the milk, making sure to eliminate lumps.</li>
+            <li>Cook the sauce until it thickens, then season with salt and a pinch of nutmeg. Remove from heat.</li>
+            <li>Preheat the oven to 375°F (190°C).</li>
+            <li>In a baking dish, start by spreading a thin layer of meat sauce on the bottom.</li>
+            <li>Place a layer of lasagna noodles on top of the sauce.</li>
+            <li>Add a portion of the meat sauce, followed by a layer of béchamel sauce and a sprinkle of mozzarella 
+                and Parmesan cheese.</li>
+            <li>Repeat the layers until you reach the top, finishing with a layer of cheese.</li>
+            <li>Cover the baking dish with aluminum foil and bake for about 25-30 minutes</li>
+            <li>Remove the foil and bake for an additional 10-15 minutes or until the top is golden and bubbly.</li>
+        </ol>
     </body>
 </html>
