--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </header>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="./recipes/poutine.html">Poutine Recipe</a></li>
+        </ul>
     </body>
 </html>
