--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
             <li><a href="./recipes/poutine.html">Poutine Recipe</a></li>
+            <li><a href="./recipes/cheeseburger.html">Cheeseburger Recipe</a></li>
         </ul>
     </body>
 </html>
