add some ugly css

--- a/recipes/poutine.html
+++ b/recipes/poutine.html
@@ -3,6 +3,7 @@
     <header>
         <title>Poutine</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </header>
     <body>
         <h1>Poutine</h1>
