--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <header>
         <title>Recipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./styles.css">
     </header>
     <body>
         <h1>Odin Recipes</h1>
