--- a/recipes/cheeseburger.html
+++ b/recipes/cheeseburger.html
@@ -3,6 +3,7 @@
     <header>
         <title>Cheeseburger</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </header>
     <body>
         <h1>Cheeseburger</h1>
