--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
     <header>
         <title>Lasagna</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </header>
     <body>
         <h1>Lasagna</h1>
