create box model css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </header>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class>
             <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
             <li><a href="./recipes/poutine.html">Poutine Recipe</a></li>
             <li><a href="./recipes/cheeseburger.html">Cheeseburger Recipe</a></li>
